--- a/emhass/config.yml
+++ b/emhass/config.yml
@@ -1,7 +1,7 @@
 name: EMHASS
 description: Energy Management for Home Assistant
 url: https://github.com/davidusb-geek/emhass
-version: 0.0.20
+version: 0.0.22
 slug: emhass
 arch:
   - aarch64
@@ -11,7 +11,9 @@ arch:
   - i386
 ports:
   5000/tcp: 5000
-hassio_api: true
+map:
+  - config:rw
+startup: initialize
 homeassistant_api: true
 webui: http://[HOST]:[PORT:5000]
 options:
