--- a/emhass/config.yml
+++ b/emhass/config.yml
@@ -1,7 +1,7 @@
 name: EMHASS
 description: Energy Management for Home Assistant
 url: https://github.com/davidusb-geek/emhass
-version: 0.0.22
+version: 0.1.0
 slug: emhass
 arch:
   - aarch64
@@ -12,11 +12,13 @@ arch:
 ports:
   5000/tcp: 5000
 map:
-  - config:rw
-startup: initialize
+  - config:ro
+startup: application
 homeassistant_api: true
 webui: http://[HOST]:[PORT:5000]
 options:
+  home_assistant_url: http://localhost:8123/
+  long_lived_access_token: thatverylongtokenhere
   costfun: profit
   optimization_time_step: 30
   historic_days_to_retrieve: 2
@@ -47,6 +49,8 @@ options:
   battery_maximum_state_of_charge: 0.9
   battery_target_state_of_charge: 0.6
 schema:
+  home_assistant_url: str
+  long_lived_access_token: str
   costfun: list(profit|cost|self-consumption)
   optimization_time_step: int(10,1440)
   historic_days_to_retrieve: int(2,365)
