Fix - New Dockerfile, now using official Home Assistant images for multi-platforms

--- a/emhass/Dockerfile
+++ b/emhass/Dockerfile
@@ -1,31 +1,38 @@
-FROM python:3.8-slim-buster
-
-# copy the requirements file into the image
-COPY ./requirements.txt /app/requirements.txt
+ARG BUILD_FROM
+FROM ${BUILD_FROM}
 
 # switch working directory
-WORKDIR /app
+WORKDIR /usr/src
 
-# Setup slim-buster
+# copy the requirements file into the image
+COPY ./requirements.txt /usr/src/requirements.txt
+
+# Setup
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
+        libffi-dev \
+        python3 \
+        python3-pip \
+        python3-dev \
         git \
         build-essential \
-        make \
-        gcc \
-    && pip3 install --no-cache-dir \
-        -r requirements.txt \
-    && apt-get remove -y --purge make gcc build-essential \
-    && apt-get autoremove -y \
+    && pip3 install --no-cache-dir -U setuptools wheel \
+    && pip3 install --no-cache-dir -r requirements.txt \
+    && apt-get purge -y --auto-remove \
+        git \
+        build-essential \
+        python3-dev \
     && rm -rf /var/lib/apt/lists/*
 
-# copy every content from the local file to the image
-COPY . /app
+WORKDIR /
 
-# configure the container to run in an executed manner
-ENTRYPOINT [ "python" ]
-
-CMD ["app_server.py" ]
+# copy contents
+COPY app_server.py /usr/src
+COPY config_emhass.json /usr/src
+COPY templates /usr/src/templates
+COPY static /usr/src/static
+COPY data /usr/src/data
+COPY rootfs /
 
 # Labels
 LABEL \
@@ -33,5 +40,5 @@ LABEL \
   io.hass.description="EMHASS: Energy Management for Home Assistant" \
   io.hass.version=${BUILD_VERSION} \
   io.hass.type="addon" \
-  io.hass.arch="aarch64|amd64|armhf|armv7|i386"
+  io.hass.arch="aarch64|amd64|armhf|armv7"
 
