--- a/emhass/config.yml
+++ b/emhass/config.yml
@@ -1,7 +1,7 @@
 name: EMHASS
 description: Energy Management for Home Assistant
 url: https://github.com/davidusb-geek/emhass
-version: 0.1.16
+version: 0.1.17
 slug: emhass
 arch:
   - aarch64
@@ -16,6 +16,7 @@ startup: application
 homeassistant_api: true
 webui: http://[HOST]:[PORT:5000]
 options:
+  web_ui_url: 0.0.0.0
   costfun: profit
   optimization_time_step: 30
   historic_days_to_retrieve: 2
@@ -46,6 +47,7 @@ options:
   battery_maximum_state_of_charge: 0.9
   battery_target_state_of_charge: 0.6
 schema:
+  web_ui_url: str
   costfun: list(profit|cost|self-consumption)
   optimization_time_step: int(10,1440)
   historic_days_to_retrieve: int(2,365)
