--- a/emhass/requirements.txt
+++ b/emhass/requirements.txt
@@ -1,6 +1,6 @@
 numpy>=1.20.1
 pandas>=1.2.3
-pvlib>=0.9.0
+pvlib>=0.9.1
 protobuf>=3.0.0
 siphon>=0.9
 pytz>=2021.1
@@ -11,5 +11,6 @@ pyyaml>=5.4.1
 netcdf4>=1.5.3
 tables>=3.6.1
 flask>=2.0.3
-plotly
+Flask-Caching>=1.10.1
+plotly>=5.6.0
 git+https://github.com/davidusb-geek/emhass
