--- a/emhass/config.yml
+++ b/emhass/config.yml
@@ -1,7 +1,7 @@
 name: EMHASS
 description: Energy Management for Home Assistant
 url: https://github.com/davidusb-geek/emhass
-version: 0.1.18
+version: 0.1.19
 slug: emhass
 arch:
   - aarch64
@@ -16,17 +16,18 @@ startup: application
 homeassistant_api: true
 webui: http://[HOST]:[PORT:5000]
 options:
-  web_ui_url: 0.0.0.0
+  hass_url: empty
+  long_lived_token: empty
   costfun: profit
   optimization_time_step: 30
   historic_days_to_retrieve: 2
   sensor_power_photovoltaics: sensor.power_photovoltaics
   sensor_power_load_no_var_loads: sensor.power_load_no_var_loads
   number_of_deferrable_loads: 2
-  nominal_power_of_deferrable_loads: 3000, 750
-  operating_hours_of_each_deferrable_load: 5, 8
-  peak_hours_periods_start_hours: 02:54, 17:24
-  peak_hours_periods_end_hours: 15:24, 20:24
+  nominal_power_of_deferrable_loads: 3000,750
+  operating_hours_of_each_deferrable_load: 5,8
+  peak_hours_periods_start_hours: 02:54,17:24
+  peak_hours_periods_end_hours: 15:24,20:24
   load_peak_hours_cost: 0.1907
   load_offpeak_hours_cost: 0.1419
   photovoltaic_production_sell_price: 0.065
@@ -47,7 +48,8 @@ options:
   battery_maximum_state_of_charge: 0.9
   battery_target_state_of_charge: 0.6
 schema:
-  web_ui_url: str
+  hass_url: str
+  long_lived_token: str
   costfun: list(profit|cost|self-consumption)
   optimization_time_step: int(10,1440)
   historic_days_to_retrieve: int(2,365)
