Fix - Following improvements in EMHASS handling solver related errors, new release 0.1.21

--- a/emhass/Dockerfile
+++ b/emhass/Dockerfile
@@ -16,8 +16,10 @@ RUN apt-get update \
         python3-dev \
         git \
         build-essential \
+        glpk-utils \
     && pip3 install --no-cache-dir -U setuptools wheel \
     && pip3 install --no-cache-dir -r requirements.txt \
+    && pulptest \
     && apt-get purge -y --auto-remove \
         git \
         build-essential \
