--- a/emhass/requirements.txt
+++ b/emhass/requirements.txt
@@ -12,6 +12,8 @@ netcdf4>=1.5.3
 tables>=3.6.1
 flask>=2.0.3
 Flask-Caching>=1.10.1
+#waitress>=2.1.1
+#Paste>=3.5.0
 plotly>=5.6.0
 emhass==0.2.9
 #git+https://github.com/davidusb-geek/emhass.git@0f67c27
