Fix - Fixed data passing using flask cache, now just using pickle

--- a/.github/workflows/publish_docker.yaml
+++ b/.github/workflows/publish_docker.yaml
@@ -23,3 +23,6 @@ jobs:
             --all \
             --target emhass \
             --docker-hub davidusb
+            -d davidusb \
+            --docker-user davidusb \
+            --docker-password ${{ secrets.DOCKERHUB_TOKEN }}
