--- a/emhass/config.yml
+++ b/emhass/config.yml
@@ -1,17 +1,18 @@
 name: EMHASS
 description: Energy Management for Home Assistant
 url: https://github.com/davidusb-geek/emhass
-version: 0.1.29
+version: 0.1.30
 slug: emhass
 arch:
   - aarch64
   - amd64
   - armhf
   - armv7
+image: "davidusb/image-{arch}-emhass"
 ports:
   5000/tcp: 5000
 map:
-  - config:ro
+  - config:rw
 startup: application
 homeassistant_api: true
 webui: http://[HOST]:[PORT:5000]
