Fix - Fixed error on if condition for correct list lengths and still solving issues on armv7 builds

--- a/emhass/Dockerfile
+++ b/emhass/Dockerfile
@@ -20,6 +20,8 @@ RUN apt-get update \
         coinor-cbc \
         libglpk-dev \
         glpk-utils \
+        hdf5-helpers \ 
+        hdf5-tools \
     && pip3 install --no-cache-dir -U setuptools wheel \
     && pip3 install --no-cache-dir -r requirements.txt \
     && apt-get purge -y --auto-remove \
