--- a/.github/workflows/publish_docker.yaml
+++ b/.github/workflows/publish_docker.yaml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   publish:
-    name: Publish
+    name: Publish-amd64
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repository
@@ -20,7 +20,70 @@ jobs:
         uses: home-assistant/builder@master
         with:
           args: |
-            --all \
+            --amd64 \
+            --target emhass \
+            --docker-hub davidusb
+            -d davidusb \
+            --docker-user davidusb \
+            --docker-password ${{ secrets.DOCKERHUB_TOKEN }}
+  publish:
+    name: Publish-aarch64
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout the repository
+        uses: actions/checkout@v2
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Publish
+        uses: home-assistant/builder@master
+        with:
+          args: |
+            --aarch64 \
+            --target emhass \
+            --docker-hub davidusb
+            -d davidusb \
+            --docker-user davidusb \
+            --docker-password ${{ secrets.DOCKERHUB_TOKEN }}
+  publish:
+    name: Publish-armhf
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout the repository
+        uses: actions/checkout@v2
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Publish
+        uses: home-assistant/builder@master
+        with:
+          args: |
+            --armhf \
+            --target emhass \
+            --docker-hub davidusb
+            -d davidusb \
+            --docker-user davidusb \
+            --docker-password ${{ secrets.DOCKERHUB_TOKEN }}
+  publish:
+    name: Publish-armv7
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout the repository
+        uses: actions/checkout@v2
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Publish
+        uses: home-assistant/builder@master
+        with:
+          args: |
+            --armv7 \
             --target emhass \
             --docker-hub davidusb
             -d davidusb \
