Fixed manual dispatch workflow

--- a/.github/workflows/publish_docker_manual_dispatch.yaml
+++ b/.github/workflows/publish_docker_manual_dispatch.yaml
@@ -3,7 +3,7 @@ name: "Publish"
 on: [workflow_dispatch]
 
 jobs:
-  publish:
+  publish_amd64:
     name: Publish-amd64
     runs-on: ubuntu-latest
     steps:
@@ -24,7 +24,7 @@ jobs:
             -d davidusb \
             --docker-user davidusb \
             --docker-password ${{ secrets.DOCKERHUB_TOKEN }}
-  publish:
+  publish_aarch64:
     name: Publish-aarch64
     runs-on: ubuntu-latest
     steps:
@@ -45,7 +45,7 @@ jobs:
             -d davidusb \
             --docker-user davidusb \
             --docker-password ${{ secrets.DOCKERHUB_TOKEN }}
-  publish:
+  publish_armhf:
     name: Publish-armhf
     runs-on: ubuntu-latest
     steps:
@@ -66,7 +66,7 @@ jobs:
             -d davidusb \
             --docker-user davidusb \
             --docker-password ${{ secrets.DOCKERHUB_TOKEN }}
-  publish:
+  publish_armv7:
     name: Publish-armv7
     runs-on: ubuntu-latest
     steps:
