--- a/emhass/config_emhass.json
+++ b/emhass/config_emhass.json
@@ -11,7 +11,7 @@
 		{"var_interp": ["sensor.power_photovoltaics", "sensor.power_load_no_var_loads"]}
 	], 
 	"optim_conf": 
-	[
+	[	
 		{"set_use_battery": false}, 
 		{"delta_forecast": 1}, 
 		{"num_def_loads": 2}, 
@@ -31,7 +31,8 @@
 		{"load_cost_hp": 0.1907}, 
 		{"load_cost_hc": 0.1419}, 
 		{"prod_price_forecast_method": "constant"}, 
-		{"prod_sell_price": 0.065}
+		{"prod_sell_price": 0.065},
+        {"set_total_pv_sell": false}
 	], 
 	"plant_conf": 
 	[
