--- a/.github/workflows/publish_docker.yaml
+++ b/.github/workflows/publish_docker.yaml
@@ -41,39 +41,39 @@ jobs:
             --aarch64 \
             --target emhass \
             --docker-hub davidusb
-  publish_armhf:
-    name: Publish-armhf
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout the repository
-        uses: actions/checkout@v2
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Publish
-        uses: home-assistant/builder@master
-        with:
-          args: |
-            --armhf \
-            --target emhass \
-            --docker-hub davidusb
-  publish_armv7:
-    name: Publish-armv7
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout the repository
-        uses: actions/checkout@v2
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Publish
-        uses: home-assistant/builder@master
-        with:
-          args: |
-            --armv7 \
-            --target emhass \
-            --docker-hub davidusb
+  # publish_armhf:
+  #   name: Publish-armhf
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout the repository
+  #       uses: actions/checkout@v2
+  #     - name: Login to DockerHub
+  #       uses: docker/login-action@v1
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
+  #     - name: Publish
+  #       uses: home-assistant/builder@master
+  #       with:
+  #         args: |
+  #           --armhf \
+  #           --target emhass \
+  #           --docker-hub davidusb
+  # publish_armv7:
+  #   name: Publish-armv7
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout the repository
+  #       uses: actions/checkout@v2
+  #     - name: Login to DockerHub
+  #       uses: docker/login-action@v1
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
+  #     - name: Publish
+  #       uses: home-assistant/builder@master
+  #       with:
+  #         args: |
+  #           --armv7 \
+  #           --target emhass \
+  #           --docker-hub davidusb
