--- a/emhass/requirements.txt
+++ b/emhass/requirements.txt
@@ -12,8 +12,7 @@ pyyaml>=5.4.1
 netcdf4>=1.5.4
 tables>=3.6.1
 flask>=2.0.3
-#waitress>=2.1.1
-#Paste>=3.5.0
+waitress>=2.1.1
 plotly>=5.6.0
-emhass==0.2.14
-#git+https://github.com/davidusb-geek/emhass.git@0f67c27
+emhass==0.3.0
+#git+https://github.com/davidusb-geek/emhass.git@759c458
