--- a/emhass/config.yml
+++ b/emhass/config.yml
@@ -8,7 +8,7 @@ arch:
   - amd64
   - armhf
   - armv7
-#image: "davidusb/image-{arch}-emhass"
+image: "davidusb/image-{arch}-emhass"
 ports:
   5000/tcp: 5000
 map:
