--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 
 # Byte-compiled / optimized / DLL files
 emhass/__pycache__/
-emhass/devcontainer.json
+emhass/.devcontainer.json
 emhass/.vscode/*
 *.py[cod]
 *$py.class
