--- a/emhass/config.yml
+++ b/emhass/config.yml
@@ -1,7 +1,7 @@
 name: EMHASS
 description: Energy Management for Home Assistant
 url: https://github.com/davidusb-geek/emhass
-version: 0.2.11
+version: 0.2.12
 slug: emhass
 arch:
   - aarch64
@@ -24,6 +24,7 @@ options:
   costfun: profit
   optimization_time_step: 30
   historic_days_to_retrieve: 2
+  method_ts_round: nearest
   set_total_pv_sell: false
   sensor_power_photovoltaics: sensor.power_photovoltaics
   sensor_power_load_no_var_loads: sensor.power_load_no_var_loads
@@ -75,6 +76,7 @@ schema:
   costfun: list(profit|cost|self-consumption)
   optimization_time_step: int(10,1440)
   historic_days_to_retrieve: int(2,365)
+  method_ts_round: str
   set_total_pv_sell: bool
   sensor_power_photovoltaics: str
   sensor_power_load_no_var_loads: str
