--- a/emhass/config.yml
+++ b/emhass/config.yml
@@ -1,7 +1,7 @@
 name: EMHASS
 description: Energy Management for Home Assistant
 url: https://github.com/davidusb-geek/emhass
-version: 0.2.20
+version: 0.2.21
 slug: emhass
 arch:
   - aarch64
@@ -18,7 +18,6 @@ hassio_role: default
 homeassistant_api: true
 webui: http://[HOST]:[PORT:5000]
 options:
-  web_ui_url: 0.0.0.0
   hass_url: empty
   long_lived_token: empty
   costfun: profit
@@ -26,8 +25,8 @@ options:
   historic_days_to_retrieve: 2
   method_ts_round: nearest
   set_total_pv_sell: false
-  lp_solver: PULP_CBC_CMD
-  lp_solver_path: empty
+  lp_solver: COIN_CMD
+  lp_solver_path: /usr/bin/cbc
   sensor_power_photovoltaics: sensor.power_photovoltaics
   sensor_power_load_no_var_loads: sensor.power_load_no_var_loads
   number_of_deferrable_loads: 2
@@ -72,7 +71,6 @@ options:
   battery_maximum_state_of_charge: 0.9
   battery_target_state_of_charge: 0.6
 schema:
-  web_ui_url: str
   hass_url: str
   long_lived_token: str
   costfun: list(profit|cost|self-consumption)
