--- a/emhass/config_emhass.yaml
+++ b/emhass/config_emhass.yaml
@@ -47,6 +47,7 @@ optim_conf:
   - set_total_pv_sell: False # consider that all PV power is injected to the grid (self-consumption with total sell)
   - lp_solver: 'PULP_CBC_CMD' # set the name of the linear programming solver that will be used
   - lp_solver_path: 'empty' # set the path to the LP solver
+  - set_nocharge_from_grid: False # avoid battery charging from the grid
 
 plant_conf:
   - P_grid_max: 9000 # The maximum power that can be supplied by the utility grid in Watts
