--- a/emhass/requirements.txt
+++ b/emhass/requirements.txt
@@ -1,5 +1,5 @@
-numpy>=1.22.3
-pandas>=1.4.2
+numpy==1.22.2
+pandas==1.4.1
 six==1.16.0
 pvlib>=0.9.1
 protobuf>=3.0.0
@@ -10,9 +10,9 @@ beautifulsoup4>=4.9.3
 pulp>=2.4
 pyyaml>=5.4.1
 netcdf4>=1.5.4
-tables>=3.6.1
+tables==3.7.0
 flask>=2.0.3
 waitress>=2.1.1
 plotly>=5.6.0
-emhass==0.3.23
+emhass==0.3.25
 #git+https://github.com/davidusb-geek/emhass
