--- a/emhass/config.yml
+++ b/emhass/config.yml
@@ -1,7 +1,7 @@
 name: EMHASS
 description: Energy Management for Home Assistant
 url: https://github.com/davidusb-geek/emhass
-version: 0.2.25
+version: 0.2.26
 slug: emhass
 arch:
   - aarch64
@@ -12,7 +12,7 @@ image: "davidusb/image-{arch}-emhass"
 ports:
   5000/tcp: 5000
 map:
-  - config:ro
+  - config:rw
 init: false
 hassio_role: default
 homeassistant_api: true
