--- a/emhass/config.yml
+++ b/emhass/config.yml
@@ -1,7 +1,7 @@
 name: EMHASS
 description: Energy Management for Home Assistant
 url: https://github.com/davidusb-geek/emhass
-version: 0.2.28
+version: 0.2.29
 slug: emhass
 arch:
   - aarch64
@@ -17,6 +17,8 @@ map:
 init: false
 hassio_role: default
 homeassistant_api: true
+# ingress: true
+# host_network: true
 webui: http://[HOST]:[PORT:5000]
 options:
   hass_url: empty
