Fix - Fixed some bugs and prepared new release

--- a/emhass/Dockerfile
+++ b/emhass/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /usr/src
 
 # copy the requirements file into the image
 COPY ./requirements.txt /usr/src/requirements.txt
+# COPY ./emhass-0.4.3b1-py3-none-any.whl /usr/src/emhass-0.4.3b1-py3-none-any.whl
 
 # Setup
 RUN apt-get update \
@@ -33,6 +34,7 @@ RUN apt-get update \
     && pip3 install netCDF4==1.5.4 \
     && pip3 install --extra-index-url=https://www.piwheels.org/simple --no-cache-dir -U setuptools wheel \
     && pip3 install --extra-index-url=https://www.piwheels.org/simple --no-cache-dir -r requirements.txt \
+    # && pip3 install emhass-0.4.3b1-py3-none-any.whl \
     && apt-get purge -y --auto-remove \
         python3-pip \
         python3-dev \
